tests/src/negative/redefFunc.py
def f() -> int:
    return 0

def f() -> int:
    return 1
